--- a/mysalary.html
+++ b/mysalary.html
@@ -85,7 +85,7 @@
                         <div class="sub-item">
                             <input type="text" readonly="readonly" data-wrapper-class="ui-custom">
                         </div>
-                        <span>&gt;</span>
+                        <span class="fr">&gt;</span>
                     </div>
 
                     <div class="item">
@@ -93,7 +93,7 @@
                         <div class="sub-item">
                             <input type="text" readonly="readonly" data-wrapper-class="ui-custom">
                         </div>
-                        <span>&gt;</span>
+                        <span class="fr">&gt;</span>
                     </div>
 
                     <div class="item">
@@ -106,7 +106,7 @@
 
                 </fieldset>
             </form>
-            <a href="#" class="fr" style="margin-right: 1.5em; text-decoration: underline">查询支行信息</a>
+            <a href="#" class="fr">查询支行信息</a>
         </div>
     </div>
 </div>
