delete default content

--- a/mysalary.html
+++ b/mysalary.html
@@ -25,17 +25,17 @@
     <div data-role="main" class="ui-content" id="content">
         <div class="ui-grid-a">
             <div class="ui-block-solo" id="total">
-                <p>累计收入：<strong>8000</strong> 元</p>
+                <p>累计收入：<strong>0</strong> 元</p>
             </div>
 
             <div class="ui-block-a" id="yesterday-income">
-                <p><span>300</span>元<br/>
+                <p><span>0</span>元<br/>
 
                     昨日收入</p>
             </div>
 
             <div class="ui-block-b" id="delay-income">
-                <p><span>1500</span>元<br/>
+                <p><span>0</span>元<br/>
 
                     待发放 (元)</p>
             </div>
@@ -99,8 +99,7 @@
                     <div class="item">
                         <div>支行信息</div>
                         <div class="sub-item">
-                            <input id="sub-branch" name="sub-branch" placeholder="例如：招商银行杭州城西支行"
-                                   data-wrapper-class="ui-custom">
+                            <input id="sub-branch" name="sub-branch" data-wrapper-class="ui-custom">
                         </div>
                     </div>
 
